<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpFragment">

    <ImageView
        android:layout_width="258dp"
        android:layout_height="224dp"
        android:layout_marginBottom="104dp"
        android:src="@drawable/listen1"
        app:layout_constraintBottom_toTopOf="@+id/email2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text"
        android:layout_width="361dp"
        android:layout_height="58dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/m"
        android:text="@string/sing_up"
        android:textAlignment="center"
        android:textColor="@color/tital"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/text_parson_name"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email2" />

    <EditText
        android:id="@+id/conformpassword"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/conform_password"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/alrady_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="32dp"
            android:text="Already have an account?"
            android:textColor="#743089"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/singintext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="32dp"
            android:text="@string/singin"
            android:textColor="@color/tital"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/Buttonsingup"
        android:layout_width="310dp"
        android:layout_height="61dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/gradiant_button_background"
        android:text="@string/registar"
        android:textColor="@color/taranswhite"
        android:enabled="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/conformpassword"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>